--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>OneBitMusic</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <body>
